# g2o-swig

./: CMakeLists.txt
benchmarks/: jacobian_timing_tests.cpp
swig/: CMakeLists.txt  odoslam.cc  odoslam.h  odoslam.i
